# ut-plants

./: .gitignore  CMakeLists.txt  TRANSLATORS.md  lang_conv.sh  sailfishos-main.cpp
po/: it.po  sv.po
qml/: Main.qml  harbour-plants.qml  qml.qrc
qml/compat/: ContentItem.qml  ContentPeerPicker.qml  InverseMouseArea.qml  MainView.qml  Settings.qml  UbuUnits.qml
qml/dialogs/: ErrorDialog.qml  PickerDialog.qml  QuestionDialog.qml
qml/pages/: ImportPage.qml  MainPage.qml  PlantPage.qml  RequestPage.qml  ResultsPage.qml  SettingsPage.qml
qml/util/: Dialogs.qml  Disclaimer.qml  GBIFCard.qml  GBIFCardBase.qml  GBIFMap.qml  IconButton.qml  LoadingScreen.qml  PlantCard.qml  PlantItem.qml  PlantUtils.qml  SFOSShare.qml  WikiCard.qml  country-flags.js  gbifutils.js  languages-iso-639-1-2-3.js  qmldir
rpm/: harbour-plants.spec  harbour-plants.yaml
src/: identification.cpp  identification.hpp  plant.cpp  plant.hpp  plantsimageprovider.cpp  plantsmodel.cpp  plantsmodel.hpp
translations/: CMakeLists.txt  de.ts  fr.ts  it.ts  nl.ts  sv.ts
